syntax = "proto3";

option go_package = "github.com/vantoan19/Petifies/proto/post-service/v1";

import "common/common.proto";


service PostService {
    rpc CreatePost(CreatePostRequest) returns (Post) {}
    rpc CreateComment(CreateCommentRequest) returns (Comment) {}
}